feat: Phase 11 — 백엔드 하드코딩 제거, 관리자 계정 시드, API 테스트 추가
## backend
- application.yml: DB/Redis 환경변수화, Kakao·Naver redirect-uri → {baseUrl} 패턴
- SecurityConfig/WebMvcConfig: CORS allowedOrigins 환경변수(CORS_ALLOWED_ORIGINS) 파싱
- OAuth2SuccessHandler: REFRESH_TOKEN_TTL_DAYS/COOKIE_MAX_AGE 상수 추출
- AuthController: REFRESH_TOKEN_TTL_DAYS 상수, reissue() DB role 조회, GET /auth/me 추가
- JwtTokenProvider: 하드코딩 "ROLE_USER" → Role.USER.getKey()
- .env.example: DB_HOST/PORT/USER/PASS, REDIS_HOST/PORT, CORS_ALLOWED_ORIGINS 추가

## frontend
- oauth/callback/page.tsx: fetchCurrentUser()로 실제 닉네임·이메일 fetch

## analysis
- youtube_collector.py: mock 데이터 view/like/comment_count 음수 버그 수정
- tests/test_trends.py: 뉴스·YouTube·통합 키워드 API 테스트 16개 추가

## e2e / infra
- global-setup.ts + helpers/db.ts: admin@e2e.com ADMIN role DB 시드 자동화
- docker-compose.yml: MySQL 3306 포트 호스트 노출 (E2E DB 접근용)
- TEST_PLAN.md: Phase 11 섹션 추가 (API 11.1~11.5, 소셜 로그인, admin 계정)

## docs
- SPEC.md: Phase 11 신규, 완성도 95% 반영, OAuth2 완료 항목 체크
- PRD.md/AI_FEATURES.md: 최신 상태 동기화

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>